--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,10 @@
 {
   "name": "arc-info-messages",
   "description": "A list of app messages to be displayed to the user",
-  "version": "2.0.1",
-  "license": "Apache-2.0 OR CC-BY-4.0",
+  "version": "2.0.2",
+  "license": "Apache-2.0",
   "authors": [
+    "Pawel Psztyc",
     "The Advanced REST client authors <arc@mulesoft.com>"
   ],
   "keywords": [
@@ -38,7 +39,6 @@
   },
   "ignore": [
     "**/.*",
-    "dependencyci.yml",
     "node_modules",
     "bower_components",
     "test",
