--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ addons:
   sauce_connect: true
 script:
 - polymer lint arc-info-messages.html arc-info-message.html
-- xvfb-run polymer test polymer test --plugin local
+- xvfb-run polymer test --plugin local
 - if [ "${TRAVIS_PULL_REQUEST}" = "false" ]; then polymer test --plugin sauce --job-name
   "arc-info-messages:${TRAVIS_BRANCH}" --build-number=${TRAVIS_BUILD_NUMBER}; fi
 cache:
