--- a/package.json
+++ b/package.json
@@ -1,29 +1,55 @@
 {
-  "name": "@advanced-rest-client/arc-info-messages",
-  "version": "2.0.3",
-  "license": "Apache-2.0",
   "description": "A list of app messages to be displayed to the user",
+  "keywords": [
+    "web-components",
+    "polymer",
+    "arc",
+    "messaging"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/advanced-rest-client/arc-info-messages.git"
+  },
+  "name": "@advanced-rest-client/arc-info-messages",
+  "version": "3.0.0-preview.1",
+  "license": "Apache-2.0",
   "authors": [
     "Pawel Psztyc",
     "The Advanced REST client authors <arc@mulesoft.com>"
   ],
   "devDependencies": {
-    "@polymer/gen-typescript-declarations": "^1.1.1"
+    "@polymer/gen-typescript-declarations": "^1.6.1",
+    "@polymer/iron-component-page": "^4.0.0",
+    "@polymer/iron-demo-helpers": "^3.0.0",
+    "@polymer/test-fixture": "^4.0.2",
+    "@webcomponents/webcomponentsjs": "^2.0.0",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "sinon": "^7.2.3",
+    "wct-mocha": "^1.0.0"
   },
-  "private": false,
-  "main": "arc-info-messages.html",
+  "main": "arc-info-messages.js",
   "scripts": {
-    "lint": "polymer lint arc-info-messages.html arc-info-message.html",
+    "lint": "polymer lint arc-info-messages.js arc-info-message.js",
     "test-sauce": "polymer test --plugin sauce --job-name \"arc-info-messages:local-test\"",
     "test": "polymer test --plugin local",
-    "update-types": "bower install && gen-typescript-declarations --deleteExisting --outDir ."
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/advanced-rest-client/arc-info-messages.git"
+    "update-types": "gen-typescript-declarations --deleteExisting --outDir ."
   },
   "bugs": {
     "url": "https://github.com/advanced-rest-client/arc-info-messages/issues",
     "email": "arc@mulesoft.com"
+  },
+  "contributors": [
+    "Pawel Psztyc",
+    "The Advanced REST client authors <arc@mulesoft.com>"
+  ],
+  "dependencies": {
+    "@advanced-rest-client/arc-icons": "^3.0.0-preview.2",
+    "@advanced-rest-client/arc-messages-service": "^3.0.0-preview.1",
+    "@advanced-rest-client/date-time": "^3.0.0-preview.1",
+    "@polymer/iron-flex-layout": "^3.0.0",
+    "@polymer/paper-icon-button": "^3.0.0",
+    "@polymer/paper-toast": "^3.0.0",
+    "@polymer/polymer": "^3.0.0"
   }
 }
